# Nirman5.0

./: card.txt  dev.ts  input.txt  ph testing.txt  soil ph testing.txt
Arnak/: auth-customer.html  auth.html  cart.html  collab.html  customer-shop.html  index.html  marketplace.html  orders.html  wishlist.html
Arnak/css/: style.css
Arnak/js/: data.js  firebase.js  login.js  script.js  signup.js
Aurix/: ARDUINONANOFULL.cpp  ESP32CAMCOMPLETE.cpp
Binary_Bytes/: README.md  index.html  package-lock.json  package.json
Binary_Bytes/src/: App.tsx  README.md
Bit-Ninjas/medbot/: pubspec.yaml
Break_Bros/: analyze ph1.txt  analyze ph2.txt  analyze soil.txt  button.txt  layout.txt  layout1.txt  page.txt  page2.txt  skeleton.txt  table.txt  textarea.txt
ByteForce/bytebucks-main/: .env  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
Chetak/: README.md
Chetak/esp_webpage/: esp_webpage.ino
Chetak/firmware_riscv/: CMakeLists.txt  CMakeLists.txt.txt  main.c  riscv_converter.py
Chetak/firmware_riscv/PMP/: CMakeLists.txt  PMP.c
Chetak/firmware_riscv/crypto/: aes.c  aes.h
Chetak/firmware_riscv/main/: main.c
CodeAlchemy/EdAlchemy_push3/: script.js
CodeVesre/: MapView.jsx
Code_Rangers/: app.py  index.html  script.js  style.css
Code_buster/: .gitignore  README.md  start.bat  start.sh  test_mysql.py  test_mysql_auth.py
Code_buster/backend/: .env.example  .gitignore  FIREBASE_SETUP.md  GMAIL_SETUP.md  README.md  SUPABASE_SETUP.md  check_db.py  check_firebase.py  check_firebase_status.py  comprehensive_fix.py  debug_status.py  fix_database.py  fix_typing_extensions.py  list_complaints.py  requirements.txt  requirements_py314.txt  seed_firebase.py  smart_start.py  start_server.py  start_with_fix.py  startup_log.txt  startup_log_new.txt  test_simplified_complaint.py  test_submit_and_list.py
Code_buster/frontend/: .stylelintrc.json  README.md  index.html  package.json  vite.config.js
CtrlAltReturn/: MainActivity.kt  WindowsByte0.py  byte0.py
CyberFreaks/: AI_ASSISTANT_ENHANCEMENTS.md  AI_ASSISTANT_SETUP.md  App.jsx  CONVERSION_SUMMARY.md  Dashboard.jsx  EXPERIENCE_AI_ASSISTANT.md  FIX_CONVERSATIONS.md  FIX_OLLAMA_ERROR.md  FRONTEND_PAGES_CREATED.md  HOW_TO_START.md  QUICK_START.txt  SERVER_RUNNING.md  SETUP_COMPLETE.md  START_EXPERIENCE.md  START_SERVER.md  WEBSITE_NOT_OPENING_FIX.md  WHY_NOT_AUTO_INSTALLED.md  index-B-NaFqQk.css  index-BFb5tSJI.js  index.css  index.html  install-and-run-ollama.bat  install-ollama-automated.ps1  package-lock.json  package.json  setup-ai-assistant.bat  setup-ai-assistant.ps1  start-all.bat  start-all.ps1  test-assistant.ps1
Cygnus/: .gitignore
Cygnus/agenticai/: .gitignore  server.py
Cygnus/client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Cygnus/ml/: .gitignore  app.py  class_mapping.json  class_names.pkl  label_encoder.pkl  main.py  model_config.pkl  package-lock.json  requirements.txt  requirements1.txt
Cygnus/server/: .gitignore  package-lock.json  package.json  server.js
Data_Directors/: README.md  package.json
DevLock/frontend/: index.html
Dev_Synergy/: dashboard.html  mqtt_publisher.py  realtime_mpu_sim900a.py  requirements.txt
Heisenberg_Protocol/: advisory_report.html  government_schemes.html  home_dashboard  pro 01.html  smart_advisory.html  style.css  tools_page.html
Inohex/: index.css
Liminal/: App.tsx  app.py  package-lock.json  package.json  tailwind.config.js
MindMisfits/: package-lock.json
Navikarana/: DoctorSignUp  Login  Navikarana
Nexusnova/: index.html  package-lock.json  package.json
Quantum_Coders/: index.html  package-lock.json  package.json  tailwind.config.ts
Resolvers/: Resolvers
Team_Alpha/: .env.local.example  docker-compose.yml
Team_EvoniX/: globals.css  package.json  page.tsx
Team_Falcon/: .gitignore  README.md  package-lock.json  package.json  versel.json
TechNomads/: .gitignore  Progress.md  Readme.md  Todo.md
TechNova/: app.js  index.html  sams29.ino  style.css
TechSphere/: SafeBrowse_PPT.pptx
The_Five_Amigo-Bytes/: leafify_ml.py  package-lock.json  package.json  requirements.txt
The_Hackerpunk_1989/: The_Hackerpunk_1989
VisionCoders/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
Vissora/: .config  METADATA  detect.html  fonts.css  generate_pdf.py
XLR8/: .gitignore  README.md  app.py  export_training_data.py  index.html  murd_simple.py  phishing_detector.py  phishing_model.pkl  requirements.txt  script.js  show_training_data.py  styles.css  training_data.csv
Zero_error/: readme.md
silicon15/: README.md  index.html  package-lock.json  package.json  receivercode.ino  sendercode.ino
(+739 files in other folders)
